    - Rename tasks/po/C.po into tasks/po/debian-tasks.pot.
    - Add po/tasksel.pot and tasks/po/debian-tasks.pot into subversion
      repository to help translators, but they are not updated if only
      POT-Creation-Date has changed.
    - Sort tasks when generating debian-tasks.desc so that number lines
      in generated PO files do not change when different users build this
      file.
  * Konstantinos Margaritis
    - Update Greek translations.

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Jan 2004 23:00:08 -0500

tasksel (1.42) unstable; urgency=low

  * The gnome metapackage has finally went into testing; make it Kay for the
    desktop task.
  * Dutch translation from cobaco.

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Jan 2004 11:55:50 -0500

tasksel (1.41) unstable; urgency=low

  * Javier Fernandez-Sanguino:
    - Fixed typo in po/es.po and added tasks/po/es.po which should
      now provide a full translation of tasksel to Spanish.
  * Konstantinos Margaritis
    - Add po/el.po and tasks/po/el.po translations  Closes: #226861
    - Add Greek task.
  * Bart Cornelis
    - Update po/nl.po translation  Closes: #228301
    - Added Initial tasks/po/nl.po translation
  * Claus Hindsgaul
    - Update da.po (Danish translation)
  * Miroslav Kure
    - Update po/cs.po
  * Carlos Z.F. Liu
    - Add po/zh_CN.po and tasks/po/zh_CN.po translations  Closes: #228730
  * VEROK Istvan
    - Update po/hu.po and add new tasks/po/hu.po translation  Closes: #228736
  * Joey Hess
    - Moved the repository to svn.debian.org (alioth).
    - Misc changes for subversion.
    - Add xprt-xprintorg to the desktop and office tasks. Closes: #226605

 -- Bart Cornelis <cobaco@linux.be>  Fri, 23 Jan 2004 10:55:46 +0100

tasksel (1.40) unstable; urgency=low

  * Christian Perrier
    - Update tasks/po/fr.po  Closes: #221301
  * A few other language updates too: cs, da.

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Dec 2003 15:12:27 -0500

tasksel (1.39) unstable; urgency=low
